--- a/app/src/main/res/layout/activity_enviar_datos.xml
+++ b/app/src/main/res/layout/activity_enviar_datos.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/teal_200"
     tools:context=".EnviarDatos">
 
     <TextView
@@ -24,8 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/titulo"
+        android:inputType="textPersonName"
         android:text="@string/nombre"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +37,7 @@
         app:layout_constraintVertical_bias="0.374" />
 
     <Button
-        android:id="@+id/btEnviarDatos"
+        android:id="@+id/btEnviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/titulo"
